ply/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    PERIOD

Grammar

Rule 0     S' -> program
Rule 1     program -> programName f_loadVispiFunctions hardware moreVars moreAssign functions
Rule 2     f_loadVispiFunctions -> <empty>
Rule 3     programName -> PROGRAM ID NEWLINE
Rule 4     empty -> <empty>
Rule 5     hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration
Rule 6     camDeclaration -> empty
Rule 7     camDeclaration -> CAM WEBCAM COLON ID NEWLINE
Rule 8     camDeclaration -> CAM PICAM COLON ID NEWLINE
Rule 9     inputsDeclaration -> empty
Rule 10    inputsDeclaration -> INPUT f_saveType pinList NEWLINE
Rule 11    outputsDeclaration -> empty
Rule 12    outputsDeclaration -> OUTPUT f_saveType pinList NEWLINE
Rule 13    pwmDeclaration -> empty
Rule 14    pwmDeclaration -> PWM f_saveType pinList NEWLINE
Rule 15    pinList -> C_INT COLON ID
Rule 16    pinList -> C_INT COLON ID COMMA pinList
Rule 17    vars -> f_checkTab tipo idList NEWLINE f_resetTab moreVars
Rule 18    moreVars -> f_checkTab tipo idList NEWLINE f_resetTab moreVars
Rule 19    moreVars -> empty
Rule 20    f_saveType -> <empty>
Rule 21    idList -> ID
Rule 22    idList -> ID COMMA idList
Rule 23    tipo -> BOOL f_saveType
Rule 24    tipo -> INT f_saveType
Rule 25    tipo -> FLOAT f_saveType
Rule 26    tipo -> STRING f_saveType
Rule 27    tipo -> IMAGE f_saveType
Rule 28    functions -> DEF tipo ID f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
Rule 29    functions -> DEF tipo ID f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
Rule 30    functions -> DEF VOID f_setVoid ID f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
Rule 31    functions -> DEF VOID f_setVoid ID f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
Rule 32    functions -> DEF VOID f_setVoid MAIN f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
Rule 33    functions -> DEF VOID f_setVoid MAIN f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
Rule 34    functions -> empty
Rule 35    f_setVoid -> <empty>
Rule 36    f_endModule -> <empty>
Rule 37    f_saveModule -> <empty>
Rule 38    parameterList -> empty
Rule 39    parameterList -> COMMA tipo ID f_addToParam parameterList
Rule 40    f_addToParam -> <empty>
Rule 41    assign -> f_checkTab ID f_checkID EQUAL f_isAssign expression NEWLINE f_resetTab f_generateEqual moreAssign
Rule 42    moreAssign -> empty
Rule 43    moreAssign -> f_checkTab ID f_checkID EQUAL f_isAssign expression NEWLINE f_resetTab f_generateEqual moreAssign
Rule 44    f_isAssign -> <empty>
Rule 45    f_generateEqual -> <empty>
Rule 46    f_checkID -> <empty>
Rule 47    moreStatements -> empty
Rule 48    moreStatements -> TAB f_addTab moreTabs statement moreStatements
Rule 49    block -> TAB f_addTab moreTabs statement moreStatements
Rule 50    moreTabs -> empty
Rule 51    moreTabs -> TAB f_addTab moreTabs
Rule 52    moreTabs -> NEWLINE f_resetTab TAB f_addTab moreTabs
Rule 53    f_incTab -> <empty>
Rule 54    f_addTab -> <empty>
Rule 55    f_resetTab -> <empty>
Rule 56    f_checkTab -> <empty>
Rule 57    statement -> vars
Rule 58    statement -> assign
Rule 59    statement -> f_checkTab condition
Rule 60    statement -> f_checkTab doCycle
Rule 61    statement -> cycle
Rule 62    statement -> f_checkTab funct NEWLINE f_resetTab
Rule 63    statement -> f_checkTab RETURN f_isReturn expression f_return NEWLINE f_resetTab
Rule 64    statement -> empty
Rule 65    f_isReturn -> <empty>
Rule 66    f_return -> <empty>
Rule 67    cycle -> f_checkTab WHILE f_isCondition expression COLON f_endCondition NEWLINE f_resetTab f_incTab block END NEWLINE f_resetTab
Rule 68    condition -> IF f_isCondition expression COLON f_endCondition NEWLINE f_resetTab f_incTab block END NEWLINE f_resetTab
Rule 69    condition -> IF f_isCondition expression COLON f_endCondition NEWLINE f_resetTab f_incTab block f_checkTab ELSE f_popIf COLON NEWLINE f_resetTab f_incTab block END NEWLINE f_resetTab
Rule 70    f_decTab -> <empty>
Rule 71    doCycle -> DO f_pushDo COLON NEWLINE f_resetTab f_incTab block f_checkTab LOOP f_isDoWhile f_isCondition expression f_endCondition NEWLINE f_resetTab
Rule 72    f_popIf -> <empty>
Rule 73    f_pushDo -> <empty>
Rule 74    f_isDoWhile -> <empty>
Rule 75    f_isCondition -> <empty>
Rule 76    f_endCondition -> <empty>
Rule 77    funct -> ID f_checkProc LPAREN RPAREN
Rule 78    funct -> ID f_checkProc LPAREN f_functCall expression f_genParam f_functCall expressionList RPAREN
Rule 79    f_functCall -> <empty>
Rule 80    f_checkProc -> <empty>
Rule 81    expressionList -> empty
Rule 82    expressionList -> COMMA expression f_genParam expressionList
Rule 83    f_genParam -> <empty>
Rule 84    expression -> orExp moreOrExp
Rule 85    orExp -> andExp moreAndExp
Rule 86    moreOrExp -> empty
Rule 87    moreOrExp -> OR f_pushOperator orExp f_popOrExp moreOrExp
Rule 88    f_popOrExp -> <empty>
Rule 89    andExp -> notExp
Rule 90    moreAndExp -> empty
Rule 91    moreAndExp -> AND f_pushOperator andExp f_popAndExp moreAndExp
Rule 92    f_popAndExp -> <empty>
Rule 93    notExp -> boolExp
Rule 94    notExp -> NOT f_pushOperator boolExp f_popNotExp
Rule 95    f_popNotExp -> <empty>
Rule 96    boolExp -> exp
Rule 97    boolExp -> exp compareToken exp f_popComparation
Rule 98    f_popComparation -> <empty>
Rule 99    compareToken -> GREATER_THAN
Rule 100   compareToken -> LESS_THAN
Rule 101   compareToken -> LESS_EQUAL_THAN
Rule 102   compareToken -> GREATER_EQUAL_THAN
Rule 103   compareToken -> NOT_EQUAL_THAN
Rule 104   compareToken -> SAME_AS
Rule 105   exp -> term moreTerms
Rule 106   moreTerms -> empty
Rule 107   moreTerms -> PLUS f_pushOperator term f_popTerm moreTerms
Rule 108   moreTerms -> MINUS f_pushOperator term f_popTerm moreTerms
Rule 109   f_popTerm -> <empty>
Rule 110   term -> factor moreFactors
Rule 111   moreFactors -> empty
Rule 112   moreFactors -> DIVIDE f_pushOperator factor f_popFactor moreFactors
Rule 113   moreFactors -> TIMES f_pushOperator factor f_popFactor moreFactors
Rule 114   moreFactors -> MOD f_pushOperator factor f_popFactor moreFactors
Rule 115   factor -> LPAREN f_pushOperator expression RPAREN f_popOperator
Rule 116   factor -> cvar
Rule 117   factor -> funct
Rule 118   f_pushOperator -> <empty>
Rule 119   f_popOperator -> <empty>
Rule 120   f_popFactor -> <empty>
Rule 121   cvar -> ID f_isID
Rule 122   cvar -> C_BOOL f_isConst
Rule 123   cvar -> C_INT f_isConst
Rule 124   cvar -> C_FLOAT f_isConst
Rule 125   cvar -> C_STRING f_isConst
Rule 126   f_isID -> <empty>
Rule 127   f_isConst -> <empty>

Terminals, with rules where they appear

AND                  : 91
BOOL                 : 23
CAM                  : 7 8
COLON                : 7 8 15 16 28 29 30 31 32 33 67 68 69 69 71
COMMA                : 16 22 39 82
C_BOOL               : 122
C_FLOAT              : 124
C_INT                : 15 16 123
C_STRING             : 125
DEF                  : 28 29 30 31 32 33
DIVIDE               : 112
DO                   : 71
ELSE                 : 69
END                  : 67 68 69
EQUAL                : 41 43
FLOAT                : 25
GREATER_EQUAL_THAN   : 102
GREATER_THAN         : 99
ID                   : 3 7 8 15 16 21 22 28 29 29 30 31 31 33 39 41 43 77 78 121
IF                   : 68 69
IMAGE                : 27
INPUT                : 10
INT                  : 24
LESS_EQUAL_THAN      : 101
LESS_THAN            : 100
LOOP                 : 71
LPAREN               : 28 29 30 31 32 33 77 78 115
MAIN                 : 32 33
MINUS                : 108
MOD                  : 114
NEWLINE              : 3 7 8 10 12 14 17 18 28 29 30 31 32 33 41 43 52 62 63 67 67 68 68 69 69 69 71 71
NOT                  : 94
NOT_EQUAL_THAN       : 103
OR                   : 87
OUTPUT               : 12
PERIOD               : 
PICAM                : 8
PLUS                 : 107
PROGRAM              : 3
PWM                  : 14
RETURN               : 63
RPAREN               : 28 29 30 31 32 33 77 78 115
SAME_AS              : 104
STRING               : 26
TAB                  : 48 49 51 52
TIMES                : 113
VOID                 : 30 31 32 33
WEBCAM               : 7
WHILE                : 67
error                : 

Nonterminals, with rules where they appear

andExp               : 85 91
assign               : 58
block                : 28 29 30 31 32 33 67 68 69 69 71
boolExp              : 93 94
camDeclaration       : 5
compareToken         : 97
condition            : 59
cvar                 : 116
cycle                : 61
doCycle              : 60
empty                : 6 9 11 13 19 34 38 42 47 50 64 81 86 90 106 111
exp                  : 96 97 97
expression           : 41 43 63 67 68 69 71 78 82 115
expressionList       : 78 82
f_addTab             : 48 49 51 52
f_addToParam         : 29 31 33 39
f_checkID            : 41 43
f_checkProc          : 77 78
f_checkTab           : 17 18 41 43 59 60 62 63 67 69 71
f_decTab             : 
f_endCondition       : 67 68 69 71
f_endModule          : 28 29 30 31 32 33
f_functCall          : 78 78
f_genParam           : 78 82
f_generateEqual      : 41 43
f_incTab             : 28 29 30 31 32 33 67 68 69 69 71
f_isAssign           : 41 43
f_isCondition        : 67 68 69 71
f_isConst            : 122 123 124 125
f_isDoWhile          : 71
f_isID               : 121
f_isReturn           : 63
f_loadVispiFunctions : 1
f_popAndExp          : 91
f_popComparation     : 97
f_popFactor          : 112 113 114
f_popIf              : 69
f_popNotExp          : 94
f_popOperator        : 115
f_popOrExp           : 87
f_popTerm            : 107 108
f_pushDo             : 71
f_pushOperator       : 87 91 94 107 108 112 113 114 115
f_resetTab           : 17 18 28 29 30 31 32 33 41 43 52 62 63 67 67 68 68 69 69 69 71 71
f_return             : 63
f_saveModule         : 28 29 30 31 32 33
f_saveType           : 10 12 14 23 24 25 26 27
f_setVoid            : 30 31 32 33
factor               : 110 112 113 114
funct                : 62 117
functions            : 1 28 29 30 31 32 33
hardware             : 1
idList               : 17 18 22
inputsDeclaration    : 5
moreAndExp           : 85 91
moreAssign           : 1 41 43
moreFactors          : 110 112 113 114
moreOrExp            : 84 87
moreStatements       : 48 49
moreTabs             : 48 49 51 52
moreTerms            : 105 107 108
moreVars             : 1 17 18
notExp               : 89
orExp                : 84 87
outputsDeclaration   : 5
parameterList        : 29 31 33 39
pinList              : 10 12 14 16
program              : 0
programName          : 1
pwmDeclaration       : 5
statement            : 48 49
term                 : 105 107 108
tipo                 : 17 18 28 29 29 31 33 39
vars                 : 57

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . programName f_loadVispiFunctions hardware moreVars moreAssign functions
    (3) programName -> . PROGRAM ID NEWLINE

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    programName                    shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> programName . f_loadVispiFunctions hardware moreVars moreAssign functions
    (2) f_loadVispiFunctions -> .

    CAM             reduce using rule 2 (f_loadVispiFunctions -> .)
    DEF             reduce using rule 2 (f_loadVispiFunctions -> .)
    ID              reduce using rule 2 (f_loadVispiFunctions -> .)
    BOOL            reduce using rule 2 (f_loadVispiFunctions -> .)
    INT             reduce using rule 2 (f_loadVispiFunctions -> .)
    FLOAT           reduce using rule 2 (f_loadVispiFunctions -> .)
    STRING          reduce using rule 2 (f_loadVispiFunctions -> .)
    IMAGE           reduce using rule 2 (f_loadVispiFunctions -> .)
    INPUT           reduce using rule 2 (f_loadVispiFunctions -> .)
    OUTPUT          reduce using rule 2 (f_loadVispiFunctions -> .)
    PWM             reduce using rule 2 (f_loadVispiFunctions -> .)
    $end            reduce using rule 2 (f_loadVispiFunctions -> .)

    f_loadVispiFunctions           shift and go to state 4

state 3

    (3) programName -> PROGRAM . ID NEWLINE

    ID              shift and go to state 5


state 4

    (1) program -> programName f_loadVispiFunctions . hardware moreVars moreAssign functions
    (5) hardware -> . camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration
    (6) camDeclaration -> . empty
    (7) camDeclaration -> . CAM WEBCAM COLON ID NEWLINE
    (8) camDeclaration -> . CAM PICAM COLON ID NEWLINE
    (4) empty -> .

    CAM             shift and go to state 6
    INPUT           reduce using rule 4 (empty -> .)
    OUTPUT          reduce using rule 4 (empty -> .)
    PWM             reduce using rule 4 (empty -> .)
    DEF             reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    STRING          reduce using rule 4 (empty -> .)
    IMAGE           reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    hardware                       shift and go to state 7
    camDeclaration                 shift and go to state 8
    empty                          shift and go to state 9

state 5

    (3) programName -> PROGRAM ID . NEWLINE

    NEWLINE         shift and go to state 10


state 6

    (7) camDeclaration -> CAM . WEBCAM COLON ID NEWLINE
    (8) camDeclaration -> CAM . PICAM COLON ID NEWLINE

    WEBCAM          shift and go to state 11
    PICAM           shift and go to state 12


state 7

    (1) program -> programName f_loadVispiFunctions hardware . moreVars moreAssign functions
    (18) moreVars -> . f_checkTab tipo idList NEWLINE f_resetTab moreVars
    (19) moreVars -> . empty
    (56) f_checkTab -> .
    (4) empty -> .

    BOOL            reduce using rule 56 (f_checkTab -> .)
    INT             reduce using rule 56 (f_checkTab -> .)
    FLOAT           reduce using rule 56 (f_checkTab -> .)
    STRING          reduce using rule 56 (f_checkTab -> .)
    IMAGE           reduce using rule 56 (f_checkTab -> .)
    DEF             reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    f_checkTab                     shift and go to state 13
    moreVars                       shift and go to state 14
    empty                          shift and go to state 15

state 8

    (5) hardware -> camDeclaration . inputsDeclaration outputsDeclaration pwmDeclaration
    (9) inputsDeclaration -> . empty
    (10) inputsDeclaration -> . INPUT f_saveType pinList NEWLINE
    (4) empty -> .

    INPUT           shift and go to state 17
    OUTPUT          reduce using rule 4 (empty -> .)
    PWM             reduce using rule 4 (empty -> .)
    DEF             reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    STRING          reduce using rule 4 (empty -> .)
    IMAGE           reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    inputsDeclaration              shift and go to state 16
    empty                          shift and go to state 18

state 9

    (6) camDeclaration -> empty .

    INPUT           reduce using rule 6 (camDeclaration -> empty .)
    OUTPUT          reduce using rule 6 (camDeclaration -> empty .)
    PWM             reduce using rule 6 (camDeclaration -> empty .)
    DEF             reduce using rule 6 (camDeclaration -> empty .)
    ID              reduce using rule 6 (camDeclaration -> empty .)
    BOOL            reduce using rule 6 (camDeclaration -> empty .)
    INT             reduce using rule 6 (camDeclaration -> empty .)
    FLOAT           reduce using rule 6 (camDeclaration -> empty .)
    STRING          reduce using rule 6 (camDeclaration -> empty .)
    IMAGE           reduce using rule 6 (camDeclaration -> empty .)
    $end            reduce using rule 6 (camDeclaration -> empty .)


state 10

    (3) programName -> PROGRAM ID NEWLINE .

    CAM             reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    DEF             reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    ID              reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    BOOL            reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    INT             reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    FLOAT           reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    STRING          reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    IMAGE           reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    INPUT           reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    OUTPUT          reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    PWM             reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)
    $end            reduce using rule 3 (programName -> PROGRAM ID NEWLINE .)


state 11

    (7) camDeclaration -> CAM WEBCAM . COLON ID NEWLINE

    COLON           shift and go to state 19


state 12

    (8) camDeclaration -> CAM PICAM . COLON ID NEWLINE

    COLON           shift and go to state 20


state 13

    (18) moreVars -> f_checkTab . tipo idList NEWLINE f_resetTab moreVars
    (23) tipo -> . BOOL f_saveType
    (24) tipo -> . INT f_saveType
    (25) tipo -> . FLOAT f_saveType
    (26) tipo -> . STRING f_saveType
    (27) tipo -> . IMAGE f_saveType

    BOOL            shift and go to state 24
    INT             shift and go to state 23
    FLOAT           shift and go to state 21
    STRING          shift and go to state 26
    IMAGE           shift and go to state 25

    tipo                           shift and go to state 22

state 14

    (1) program -> programName f_loadVispiFunctions hardware moreVars . moreAssign functions
    (42) moreAssign -> . empty
    (43) moreAssign -> . f_checkTab ID f_checkID EQUAL f_isAssign expression NEWLINE f_resetTab f_generateEqual moreAssign
    (4) empty -> .
    (56) f_checkTab -> .

    DEF             reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)
    ID              reduce using rule 56 (f_checkTab -> .)

    f_checkTab                     shift and go to state 27
    moreAssign                     shift and go to state 28
    empty                          shift and go to state 29

state 15

    (19) moreVars -> empty .

    DEF             reduce using rule 19 (moreVars -> empty .)
    ID              reduce using rule 19 (moreVars -> empty .)
    $end            reduce using rule 19 (moreVars -> empty .)
    TAB             reduce using rule 19 (moreVars -> empty .)
    LOOP            reduce using rule 19 (moreVars -> empty .)
    END             reduce using rule 19 (moreVars -> empty .)
    ELSE            reduce using rule 19 (moreVars -> empty .)


state 16

    (5) hardware -> camDeclaration inputsDeclaration . outputsDeclaration pwmDeclaration
    (11) outputsDeclaration -> . empty
    (12) outputsDeclaration -> . OUTPUT f_saveType pinList NEWLINE
    (4) empty -> .

    OUTPUT          shift and go to state 31
    PWM             reduce using rule 4 (empty -> .)
    DEF             reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    STRING          reduce using rule 4 (empty -> .)
    IMAGE           reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    outputsDeclaration             shift and go to state 30
    empty                          shift and go to state 32

state 17

    (10) inputsDeclaration -> INPUT . f_saveType pinList NEWLINE
    (20) f_saveType -> .

    C_INT           reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 33

state 18

    (9) inputsDeclaration -> empty .

    OUTPUT          reduce using rule 9 (inputsDeclaration -> empty .)
    PWM             reduce using rule 9 (inputsDeclaration -> empty .)
    DEF             reduce using rule 9 (inputsDeclaration -> empty .)
    ID              reduce using rule 9 (inputsDeclaration -> empty .)
    BOOL            reduce using rule 9 (inputsDeclaration -> empty .)
    INT             reduce using rule 9 (inputsDeclaration -> empty .)
    FLOAT           reduce using rule 9 (inputsDeclaration -> empty .)
    STRING          reduce using rule 9 (inputsDeclaration -> empty .)
    IMAGE           reduce using rule 9 (inputsDeclaration -> empty .)
    $end            reduce using rule 9 (inputsDeclaration -> empty .)


state 19

    (7) camDeclaration -> CAM WEBCAM COLON . ID NEWLINE

    ID              shift and go to state 34


state 20

    (8) camDeclaration -> CAM PICAM COLON . ID NEWLINE

    ID              shift and go to state 35


state 21

    (25) tipo -> FLOAT . f_saveType
    (20) f_saveType -> .

    ID              reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 36

state 22

    (18) moreVars -> f_checkTab tipo . idList NEWLINE f_resetTab moreVars
    (21) idList -> . ID
    (22) idList -> . ID COMMA idList

    ID              shift and go to state 38

    idList                         shift and go to state 37

state 23

    (24) tipo -> INT . f_saveType
    (20) f_saveType -> .

    ID              reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 39

state 24

    (23) tipo -> BOOL . f_saveType
    (20) f_saveType -> .

    ID              reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 40

state 25

    (27) tipo -> IMAGE . f_saveType
    (20) f_saveType -> .

    ID              reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 41

state 26

    (26) tipo -> STRING . f_saveType
    (20) f_saveType -> .

    ID              reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 42

state 27

    (43) moreAssign -> f_checkTab . ID f_checkID EQUAL f_isAssign expression NEWLINE f_resetTab f_generateEqual moreAssign

    ID              shift and go to state 43


state 28

    (1) program -> programName f_loadVispiFunctions hardware moreVars moreAssign . functions
    (28) functions -> . DEF tipo ID f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (29) functions -> . DEF tipo ID f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (30) functions -> . DEF VOID f_setVoid ID f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (31) functions -> . DEF VOID f_setVoid ID f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (32) functions -> . DEF VOID f_setVoid MAIN f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (33) functions -> . DEF VOID f_setVoid MAIN f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (34) functions -> . empty
    (4) empty -> .

    DEF             shift and go to state 44
    $end            reduce using rule 4 (empty -> .)

    functions                      shift and go to state 45
    empty                          shift and go to state 46

state 29

    (42) moreAssign -> empty .

    TAB             reduce using rule 42 (moreAssign -> empty .)
    DEF             reduce using rule 42 (moreAssign -> empty .)
    $end            reduce using rule 42 (moreAssign -> empty .)
    LOOP            reduce using rule 42 (moreAssign -> empty .)
    END             reduce using rule 42 (moreAssign -> empty .)
    ELSE            reduce using rule 42 (moreAssign -> empty .)


state 30

    (5) hardware -> camDeclaration inputsDeclaration outputsDeclaration . pwmDeclaration
    (13) pwmDeclaration -> . empty
    (14) pwmDeclaration -> . PWM f_saveType pinList NEWLINE
    (4) empty -> .

    PWM             shift and go to state 48
    DEF             reduce using rule 4 (empty -> .)
    ID              reduce using rule 4 (empty -> .)
    BOOL            reduce using rule 4 (empty -> .)
    INT             reduce using rule 4 (empty -> .)
    FLOAT           reduce using rule 4 (empty -> .)
    STRING          reduce using rule 4 (empty -> .)
    IMAGE           reduce using rule 4 (empty -> .)
    $end            reduce using rule 4 (empty -> .)

    pwmDeclaration                 shift and go to state 47
    empty                          shift and go to state 49

state 31

    (12) outputsDeclaration -> OUTPUT . f_saveType pinList NEWLINE
    (20) f_saveType -> .

    C_INT           reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 50

state 32

    (11) outputsDeclaration -> empty .

    PWM             reduce using rule 11 (outputsDeclaration -> empty .)
    DEF             reduce using rule 11 (outputsDeclaration -> empty .)
    ID              reduce using rule 11 (outputsDeclaration -> empty .)
    BOOL            reduce using rule 11 (outputsDeclaration -> empty .)
    INT             reduce using rule 11 (outputsDeclaration -> empty .)
    FLOAT           reduce using rule 11 (outputsDeclaration -> empty .)
    STRING          reduce using rule 11 (outputsDeclaration -> empty .)
    IMAGE           reduce using rule 11 (outputsDeclaration -> empty .)
    $end            reduce using rule 11 (outputsDeclaration -> empty .)


state 33

    (10) inputsDeclaration -> INPUT f_saveType . pinList NEWLINE
    (15) pinList -> . C_INT COLON ID
    (16) pinList -> . C_INT COLON ID COMMA pinList

    C_INT           shift and go to state 52

    pinList                        shift and go to state 51

state 34

    (7) camDeclaration -> CAM WEBCAM COLON ID . NEWLINE

    NEWLINE         shift and go to state 53


state 35

    (8) camDeclaration -> CAM PICAM COLON ID . NEWLINE

    NEWLINE         shift and go to state 54


state 36

    (25) tipo -> FLOAT f_saveType .

    ID              reduce using rule 25 (tipo -> FLOAT f_saveType .)


state 37

    (18) moreVars -> f_checkTab tipo idList . NEWLINE f_resetTab moreVars

    NEWLINE         shift and go to state 55


state 38

    (21) idList -> ID .
    (22) idList -> ID . COMMA idList

    NEWLINE         reduce using rule 21 (idList -> ID .)
    COMMA           shift and go to state 56


state 39

    (24) tipo -> INT f_saveType .

    ID              reduce using rule 24 (tipo -> INT f_saveType .)


state 40

    (23) tipo -> BOOL f_saveType .

    ID              reduce using rule 23 (tipo -> BOOL f_saveType .)


state 41

    (27) tipo -> IMAGE f_saveType .

    ID              reduce using rule 27 (tipo -> IMAGE f_saveType .)


state 42

    (26) tipo -> STRING f_saveType .

    ID              reduce using rule 26 (tipo -> STRING f_saveType .)


state 43

    (43) moreAssign -> f_checkTab ID . f_checkID EQUAL f_isAssign expression NEWLINE f_resetTab f_generateEqual moreAssign
    (46) f_checkID -> .

    EQUAL           reduce using rule 46 (f_checkID -> .)

    f_checkID                      shift and go to state 57

state 44

    (28) functions -> DEF . tipo ID f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (29) functions -> DEF . tipo ID f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (30) functions -> DEF . VOID f_setVoid ID f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (31) functions -> DEF . VOID f_setVoid ID f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (32) functions -> DEF . VOID f_setVoid MAIN f_saveModule LPAREN RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (33) functions -> DEF . VOID f_setVoid MAIN f_saveModule LPAREN tipo ID f_addToParam parameterList RPAREN COLON NEWLINE f_resetTab f_incTab block f_endModule functions
    (23) tipo -> . BOOL f_saveType
    (24) tipo -> . INT f_saveType
    (25) tipo -> . FLOAT f_saveType
    (26) tipo -> . STRING f_saveType
    (27) tipo -> . IMAGE f_saveType

    VOID            shift and go to state 58
    BOOL            shift and go to state 24
    INT             shift and go to state 23
    FLOAT           shift and go to state 21
    STRING          shift and go to state 26
    IMAGE           shift and go to state 25

    tipo                           shift and go to state 59

state 45

    (1) program -> programName f_loadVispiFunctions hardware moreVars moreAssign functions .

    $end            reduce using rule 1 (program -> programName f_loadVispiFunctions hardware moreVars moreAssign functions .)


state 46

    (34) functions -> empty .

    $end            reduce using rule 34 (functions -> empty .)


state 47

    (5) hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .

    DEF             reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    ID              reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    BOOL            reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    INT             reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    FLOAT           reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    STRING          reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    IMAGE           reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)
    $end            reduce using rule 5 (hardware -> camDeclaration inputsDeclaration outputsDeclaration pwmDeclaration .)


state 48

    (14) pwmDeclaration -> PWM . f_saveType pinList NEWLINE
    (20) f_saveType -> .

    C_INT           reduce using rule 20 (f_saveType -> .)

    f_saveType                     shift and go to state 60

state 49

    (13) pwmDeclaration -> empty .

    DEF             reduce using rule 13 (pwmDeclaration -> empty .)
    ID              reduce using rule 13 (pwmDeclaration -> empty .)
    BOOL            reduce using rule 13 (pwmDeclaration -> empty .)
    INT             reduce using rule 13 (pwmDeclaration -> empty .)
    FLOAT           reduce using rule 13 (pwmDeclaration -> empty .)
    STRING          reduce using rule 13 (pwmDeclaration -> empty .)
    IMAGE           reduce using rule 13 (pwmDeclaration -> empty .)
    $end            reduce using rule 13 (pwmDeclaration -> empty .)


state 50

    (12) outputsDeclaration -> OUTPUT f_saveType . pinList NEWLINE
    (15) pinList -> . C_INT COLON ID
    (16) pinList -> . C_INT COLON ID COMMA pinList

    C_INT           shift and go to state 52

    pinList                        shift and go to state 61

state 51

    (10) inputsDeclaration -> INPUT f_saveType pinList . NEWLINE

    NEWLINE         shift and go to state 62


state 52

    (15) pinList -> C_INT . COLON ID
    (16) pinList -> C_INT . COLON ID COMMA pinList

    COLON           shift and go to state 63


state 53

    (7) camDeclaration -> CAM WEBCAM COLON ID NEWLINE .
